# Capstone1_Team2

./: README.md  main.py  pyproject.toml  test_config.py
regulatory_compliance/app/: main.py
regulatory_compliance/core/: config.py  db.py
regulatory_compliance/ingestion/: ingestion.py
regulatory_compliance/models/: request.py  response.py
regulatory_compliance/routes/: query_routes.py  upload_routes.py
regulatory_compliance/services/: query_service.py  upload_service.py
regulatory_compliance/utils/: exceptions.py
